tests/Core/positive/test060.jvc
-- Axioms, bottom

type Unit : Type {
  unit : Unit;
};


def a : Unit := ⊥ : Unit;

def boom2 : Unit := (bottom : Unit);

2 + 2
