tests/Core/negative/parsing/test020.jvc
type Unit {
  unit : Unit;
};

case unit of {
  unit' := 0;
}
